[feat:refactoring] refactoring global archi cible et netoyage  views blade
